# FIFA26

./: .dockerignore  .env.example  .gitignore  Dockerfile.backend  README.md  docker-compose.yml  pyproject.toml
.relai/: learning-env-context.json  mock-manifest.json  optimizer-learning-envs.json  runtime-manifest.json  simulator.env.example
.relai/learning-envs/: disclose-data-freshness.py  no-fake-live-results.py  no-invented-live-scores.py  prediction-probabilities-are-calibrated.py  schedule-accuracy.py  team-comparison-uses-data.py  unknown-team-handling.py
.relai/simulator/: SDK_REFERENCE.md  check.sh  install.sh  pyproject.toml  run.sh
.relai/simulator/src/relai_simulator/: adapter.py
backend/: __init__.py
backend/app/: config.py  main.py  relai_tools.py  schemas.py
backend/app/agents/: __init__.py  world_cup_agent.py
backend/app/data/: __init__.py  cache.py  mock_data.py  sync_worldcup_2026.py
backend/app/prediction/: __init__.py  benchmark.py  engine.py  metrics.py
backend/app/telegram/: webhook.py
backend/app/tools/: __init__.py  football_tools.py
data/benchmarks/: historical_matches.csv
frontend/: .dockerignore  Dockerfile  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/lib/: api.ts
reports/: prediction_benchmark_report.csv
tests/: test_agent_fallback.py  test_api_routes.py  test_benchmark.py  test_prediction_engine.py  test_relai_tools.py
