[project]
name = "fifa-2026-agent"
version = "0.1.0"
description = "FIFA World Cup 2026 football intelligence agent with explainable predictions."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "openai-agents>=0.17.4",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "python-dotenv>=1.0.1",
    "uvicorn[standard]>=0.30.0",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 120
target-version = "py312"
